java8 konform gemacht